sheep-dog-specs/kubernetes/shared/base/amq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-amq
  labels:
    app: sheep-dog
    component: sheep-dog-amq
spec:
  selector:
    component: sheep-dog-amq
  ports:
    - port: 61616
      targetPort: 61616
      name: jms
    - port: 8161
      targetPort: 8161
      name: console
  type: NodePort
