sheep-dog-specs/kubernetes/shared/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sheep-dog-ingress
  labels:
    app: sheep-dog
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - path: /asciidoctor
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-asciidoc-api-svc
                port:
                  number: 80
          - path: /uml
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-asciidoc-api-svc
                port:
                  number: 80
          - path: /cucumber
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-cucumber-gen-svc
                port:
                  number: 80
          - path: /sheep-dog-asciidoc-api-svc/actuator
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-asciidoc-api-svc
                port:
                  number: 80
          - path: /sheep-dog-cucumber-gen-svc/actuator
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-cucumber-gen-svc
                port:
                  number: 80
          - path: /\.well-known
            pathType: ImplementationSpecific
            backend:
              service:
                name: sheep-dog-dev-mcp
                port:
                  number: 80
          - path: /mcp
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-dev-mcp
                port:
                  number: 80
